tests/ui/parser/mismatched-braces/missing-close-brace-in-struct.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing-close-brace-in-struct.rs:16:65
   |
LL | pub(crate) struct Bar<T> {
   |                          - unclosed delimiter
...
LL | fn main() {}
   |                                                                 ^

error: aborting due to 1 previous error

